--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Menu publico
 <br>
 <br>
 <br>
-<li><a href="https://sergiomartinezfelix.github.io/publico/proyecto/miBlog"<b>ProyectoFinalIntegrador</b></a></li>
+<li><a href="https://sergiomartinezfelix.github.io/publico/proyecto/index.html"<b>ProyectoFinalIntegrador</b></a></li>
 <br>
 <br>
 <div>&copy; 2021 <a href="#" target="_blank">Sergio Martínez</a></div>
